# mxtide-android

./: .cproject  .gitignore  .gitmodules  .project  AndroidManifest.xml  README.md  TODO.md  build.gradle  fdroid.keystore.asc  gradle.properties  settings.gradle
mxtide/: .gitignore  CMakeLists.txt  build.gradle
mxtide/src/androidTest/java/com/mxmariner/mxtide/internal/: StationTest.kt  TidesAndCurrentsTest.kt
mxtide/src/main/: AndroidManifest.xml
mxtide/src/main/aidl/com/mxmariner/andxtidelib/: IHarmonicsDatabaseService.aidl
mxtide/src/main/aidl/com/mxmariner/andxtidelib/remote/: RemoteStation.aidl  RemoteStationData.aidl  UnitType.aidl
mxtide/src/main/assets/: harmonics_dwf_20190620_free_tcd
mxtide/src/main/cpp/: AndXTideLib.cpp  AndXTideLib.hh  Android.mk  Demo.cpp  Jni.cpp  Jni.h  JniArrayList.cpp  JniArrayList.h  JniFloat.cpp  JniFloat.h  JniLong.cpp  JniLong.h  JniStation.cpp  JniStation.h  JniStationPrediction.cpp  JniStationPrediction.h  JniStationType.h  JniString.cpp  JniString.h  JniTidesAndCurrents.cpp  libtcd-2.2.6-r2.tar.bz2  tcd.mk  xtide-2.14.tar.bz2
mxtide/src/main/cpp/lib/: mpngConfig.cmake  pngConfig.cmake  tcdConfig.cmake  xtideConfig.cmake
mxtide/src/main/cpp/lib/tcd/: tcd.h
mxtide/src/main/cpp/lib/xtide/: AUTHORS  Errors.hh  Global.cc  Global.hh  NEWS  README  README-QUICK  RGBGraph.cc  RGBGraph.hh  SVGGraph.cc  Settings.cc  Station.cc  autoconf-defines.h  config.hh  libxtide.hh  rgb.hh  tide.cc  xml_l.cc  xml_y.cc  xml_y.h  xtide.hh
mxtide/src/main/java/com/mxmariner/andxtidelib/: HarmonicsDatabase.java  HarmonicsDatabase.kt  MXLatLng.java  MXLatLng.kt  Station.kt  XtideJni.java
mxtide/src/main/java/com/mxmariner/andxtidelib/remote/: HarmonicsDatabaseService.java  HarmonicsDatabaseService.kt  RemoteStation.kt  RemoteStationData.java  RemoteStationData.kt  StationType.kt  UnitType.kt
mxtide/src/main/java/com/mxmariner/mxtide/api/: Factory.kt  IStation.kt  IStationPrediction.kt  ITidesAndCurrents.kt  LatLng.kt  (+3 more)
mxtide/src/main/java/com/mxmariner/util/: MXTools.kt
mxtide/src/main/res/raw/: harmonics_dwf_20161231_free_tcd
mxtide/src/main/res/values-v21/: styles.xml
(+358 files in other folders)
